# opal-fetcher-postgres

./: Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
okdp/: README.md
